--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop3.1.3-java8
     container_name: datanode
+    ports:
+      - 9864:9864
     volumes:
       - hadoop_datanode:/hadoop/dfs/data
     environment:
@@ -26,6 +28,8 @@ services:
   resourcemanager:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.1.3-java8
     container_name: resourcemanager
+    ports:
+      - 8088:8088
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode:9864"
     env_file:
@@ -34,6 +38,8 @@ services:
   nodemanager1:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.1.3-java8
     container_name: nodemanager
+    ports:
+      - 8042:8042
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode:9864 resourcemanager:8088"
     env_file:
@@ -42,6 +48,8 @@ services:
   historyserver:
     image: bde2020/hadoop-historyserver:2.0.0-hadoop3.1.3-java8
     container_name: historyserver
+    ports:
+      - 8188:8188
     environment:
       SERVICE_PRECONDITION: "namenode:9870 datanode:9864 resourcemanager:8088"
     volumes:
